# s3-memes

./: README.md
docker-compose/: docker-compose.yaml
src/: Dockerfile  alembic.ini  ex.py  main.py  pyproject.toml  settings.py
src/alembic/: env.py
src/alembic/versions/: 24850acdb01a_init.py
src/app/api/: main.py
src/app/api/endpoints/: memes.py
src/app/api/schemas/: memes.py
src/domain/entities/: memes.py
src/domain/models/: memes.py
src/repository/: base.py  db.py  memes.py
src/storage/: base.py  memes.py
src/tests/: conftest.py
src/tests/app/: test_memes.py
