[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.1"
aiobotocore = "^2.13.1"
alembic = "^1.13.1"
sqlalchemy = "^2.0.27"
asyncpg = "^0.29.0"
psycopg2-binary = "^2.9.9"
pillow = "^10.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
